Viewport Sitewide Test for mobile
Viewport Sitewide Test for mobile

--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
         }
     </script>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MANE</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Jura:wght@400;700&display=swap" rel="stylesheet">    
@@ -27,7 +28,7 @@
 
 <header>
 <div class="container" style="background-color:#1a1a1a;">
-    <img id="logob" src="/Users/liamgilroy/Desktop/Desktop/Web/Mane/images/MANE_logo_2.png">
+    <img id="logob" src="https://i.imgur.com/Gg64LjW.png">
 </div>
 
 <!-- MENU -->
