--- a/clippers.html
+++ b/clippers.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MANE</title>
 
     <script>
@@ -30,7 +31,7 @@
 
 <header>
 <div class="container" style="background-color:#1a1a1a;">
-    <img id="logob" src="/Users/liamgilroy/Desktop/Desktop/Web/Mane/images/MANE_logo_2.png">
+    <img id="logob" src="https://i.imgur.com/Gg64LjW.png">
 </div>
 
 <!-- MENU -->
